--- a/css/estilos.css
+++ b/css/estilos.css
@@ -55,10 +55,19 @@
   background-color: transparent;
 }
 
+.modal-body{
+  margin-top: 25%;
+}
+
+
+
 @media only screen and (min-width: 992px) and (max-width: 1200px){
   #header-logo-container img{
     width: 35%; margin: 20px 0;
     text-align: left;
+  }
+  .modal-body{
+    margin-top: 60%;
   }
 }
 
@@ -67,12 +76,18 @@
     width: 50%; margin: 20px 0;
     text-align: left;
   }
+  .modal-body{
+    margin-top: 25%;
+  }
 }
 
 @media only screen and (min-width: 319px) and (max-width: 767px){
   #header-logo-container img{
     width: 70%; margin: 20px 0;
     text-align: left;
+  }
+  .modal-body{
+    margin-top: 25%;
   }
 }
 
@@ -81,11 +96,17 @@
     width: 80%; margin: 20px 0;
     text-align: left;
   }
+  .modal-body{
+    margin-top: 30%;
+  }
 }
 
 @media only screen and (max-width: 319px){
   #header-logo-container img{
     width: 100%; margin: 20px 0;
     text-align: left;
+  }
+  .modal-body{
+    margin-top: 50%;
   }
 }
